--- a/personal-universe/src/assets/base.css
+++ b/personal-universe/src/assets/base.css
@@ -35,6 +35,7 @@ body {
   min-height: 100vh;
   color: var(--color-text, #D8DBE2);
   background: var(--color-background, #373F51);
+  background: radial-gradient(circle at -20% -20%, rgba(169,188,208,1) 0%, rgba(2,0,36,1) 22%, rgba(55,63,81,1) 68%, rgba(65,94,110,1) 87%, rgba(88,164,176,1) 160%);
   /* transition: color 0.5s, background-color 0.5s; */
   line-height: 1.6;
   font-family: 'Roboto Condensed', Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
