--- a/personal-universe/src/assets/base.css
+++ b/personal-universe/src/assets/base.css
@@ -3,7 +3,7 @@
 
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
- --color-platinum-grey: #D8DBE2;
+ --color-platinum-grey: #d8dbe2;
  --color-powder-blue: #A9BCD0;
  --color-mindaro-green: #2AFC98;
  --color-moonstone-blue: #58A4B0;
@@ -18,6 +18,8 @@
   --color-accent-bright: var(--color-mindaro-green);
   --color-accent: var(--color-moonstone-blue);
   --color-contrast: var(--color-tomato-red);
+
+  --color-text-rgb: 216, 219, 226;
 
   --base-padding: 30px;
 }
