--- a/personal-universe/src/assets/base.css
+++ b/personal-universe/src/assets/base.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=El+Messiri:wght@400;700&family=Pattaya&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Alice&family=Roboto+Condensed:wght@300;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=El+Messiri:wght@400;700&family=Roboto+Condensed:ital,wght@0,300;0,700;1,300&display=swap');
 
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
@@ -7,7 +6,7 @@
  --color-powder-blue: #A9BCD0;
  --color-mindaro-green: #2AFC98;
  --color-moonstone-blue: #58A4B0;
- --color-charcoal-grey: #373F51;
+ --color-charcoal-grey: #373f51;
  --color-tomato-red: #FF6647;
 }
 
@@ -20,6 +19,10 @@
   --color-contrast: var(--color-tomato-red);
 
   --color-text-rgb: 216, 219, 226;
+  --color-background-rgb: 55, 63, 81;
+  --color-accent-bright-rbg: 42, 252, 152;
+  --color-accent-rgb: 88, 164, 176;
+  --color-contrast-rgb: 255, 102, 71;
 
   --base-padding: 30px;
 }
@@ -41,6 +44,7 @@ body {
   line-height: 1.6;
   font-family: 'Roboto Condensed', Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
     Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 300;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
