add new program block

--- a/personal-universe/src/assets/base.css
+++ b/personal-universe/src/assets/base.css
@@ -35,6 +35,10 @@
   position: relative;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   min-height: 100vh;
   color: var(--color-text, #D8DBE2);
