update course info

--- a/personal-universe/src/assets/base.css
+++ b/personal-universe/src/assets/base.css
@@ -24,7 +24,7 @@
   --color-accent-rgb: 88, 164, 176;
   --color-contrast-rgb: 255, 102, 71;
 
-  --base-padding: 30px;
+  --base-padding: 2rem;
 }
 
 *,
